--- a/pom.xml
+++ b/pom.xml
@@ -37,19 +37,6 @@
             <version>4.7</version>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>javax.validation</groupId>
-            <artifactId>validation-api</artifactId>
-            <version>1.0.0.GA</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>javax.validation</groupId>
-            <artifactId>validation-api</artifactId>
-            <version>1.0.0.GA</version>
-            <classifier>sources</classifier>
-            <scope>test</scope>
-        </dependency>
     </dependencies>
 
     <build>
@@ -67,9 +54,9 @@
                     <execution>
                         <goals>
                             <goal>compile</goal>
-                            <goal>test</goal>
-                            <goal>i18n</goal>
-                            <goal>generateAsync</goal>
+<!--                            <goal>test</goal>-->
+<!--                            <goal>i18n</goal>-->
+<!--                            <goal>generateAsync</goal>-->
                         </goals>
                     </execution>
                 </executions>
@@ -79,7 +66,7 @@
                 <configuration>
                     <runTarget>ModsEditorDemo.html</runTarget>
                     <hostedWebapp>${webappDirectory}</hostedWebapp>
-                    <i18nMessagesBundle>cz.mzk.modseditordemo.client.Messages</i18nMessagesBundle>
+<!--                    <i18nMessagesBundle>cz.mzk.modseditordemo.client.Messages</i18nMessagesBundle>-->
                 </configuration>
             </plugin>
 
