--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,13 @@
     <version>1.0-SNAPSHOT</version>
     <name>Mods Editor Demo</name>
 
+    <licenses>
+        <license>
+            <name>GNU General Public License</name>
+            <url>http://www.gnu.org/licenses/gpl.html</url>
+        </license>
+    </licenses>
+
     <properties>
         <gwtVersion>2.4.0</gwtVersion>
         <smartGwtVersion>3.0</smartGwtVersion>
